Cleaned up some files

--- a/tables/abkuerzungen.tex
+++ b/tables/abkuerzungen.tex
@@ -1,8 +1,13 @@
 \chapter*{Abkürzungsverzeichnis}
 \addcontentsline{toc}{chapter}{Abkürzungsverzeichnis}
 
+% Einfügen der Abkürzung zwischen den Acronym Tags
+% Hier muss die längste Abkürzung definiert werden Bsp. "DHBW"
 \begin{acronym}[DHBW] 
-% Argument definiert die Breite der ersten Spalte anhand des längsten vorkommenden Eintrags
-\acro{CRM}{Customer Relationship Management}
-\acro{DHBW}{Duale Hochschule Baden-Württemberg}
+
+    % Anlegen der Einträge (Alphabethische Reihenfolge muss selber hergestellt werden!)
+    % Befehl \acro{Abkürzung}{Ausschrieb der Abkürzung}
+    \acro{API}{Application Programming Interface}
+    \acro{DHBW}{Duale Hochschule Baden Württemberg}
+
 \end{acronym}
