--- a/deckblatt.tex
+++ b/deckblatt.tex
@@ -3,16 +3,16 @@
 % \newcommand{\typMeinerArbeit}{2. Projektarbeit} 
 % \newcommand{\typMeinerArbeit}{Seminararbeit} 
 % \newcommand{\typMeinerArbeit}{Bachelorarbeit} 
-\newcommand{\typMeinerArbeit}{Benutzerdefinierter Typ}
+\newcommand{\typMeinerArbeit}{Assignment}
 
 % Thema der Arbeit (für ehrenwörtliche Erklärung, ohne Umbrüche)
-\newcommand{\themaMeinerArbeit}{Mein Titel}
+\newcommand{\themaMeinerArbeit}{Emissionszertifikatehandel vs. EEG}
 
 % Ggf. Untertitel der Arbeit (falls dies nicht benötigt wird, das zweite Klammerpaar leer lassen, nicht das Kommando löschen!)
-\newcommand{\unterThemaMeinerArbeit}{Untertitel}
+\newcommand{\unterThemaMeinerArbeit}{Eine Gegenüberstellung}
 
 % Vorname, Name der Autorin/des Autors (für Titelseite und Metadaten)
-\newcommand{\meinName}{Vorname Nachname}
+\newcommand{\meinName}{Marvin Krämer}
 
 \thispagestyle{empty}
 
@@ -50,7 +50,7 @@ Studiengang Wirtschaftsinformatik
 \medskip
 
 % Kurs festlegen
-Kurs ... 
+Kurs WWI2018F 
 
 \vspace{10mm}
 
@@ -68,13 +68,9 @@ von
 
 % HIER EDITIEREN: Name des Unternehmens, Name der Betreuerin/des Betreuers
 \begin{tabular}{ll}
-Betreuer*in in der Ausbildungsstätte: & DHBW Stuttgart: \\
+DHBW Stuttgart: \\
 \hspace{0.4\linewidth} & \\
-Name des Unternehmens & Titel, Vorname und Nachname \\
-Titel, Vorname und Nachname der Betreuerin & der/des wissenschaftlichen Betreuerin/Prüferin \\
-Funktion der Betreuerin/des Betreuers \\
-\\
-Unterschrift der Betreuerin/des Betreuers \\
+Dr. Schweizer \\
 \end{tabular}
 
 
