--- a/content/main.tex
+++ b/content/main.tex
@@ -1,6 +1,40 @@
 \chapter{Hauptteil}
-1 Seite
 \section{Der Emissionszertifikatehandel}
--Kurzdefinition
+Der Emissionszertifikatehandel ist ein Mittel zur Reduktion des Treibhausgasaustoßes, welches die Europäische Union 2003 beschlossen hat.\footcite[Vgl. auch im Folgenden][]{Buchner2007}
+Dieses Emissionshandelssystem ist das größte System zur Marktgesteuerten Bepreisung von Emissionen und trat 2005 in Kraft.\\
+% \paragraph{Umfang}
+Der Eurpäische Emissionshandel (EU-ETS) umfasst die Mitgliedsstaaten der Europäischen Union und die Länder Norwegen, Island und Liechtenstein.
+In diesen Ländern nehmen Anlagen der besonders Treibhausgasintensiven Industrie an dem Handel teil.
+So unterliegen u.a. Zementwerke, thermische Kraftwerke und Stahlhütten dem Zertifikatehandel. Der innereuropäische Luftverkehr ist seit 2012 Teil des EU-ETS.\footcite[Vgl.][]{Umweltbundesamt}
+Weitere Industriezweige wurden 2013 in den Zertifikatehandel eingeschlossen.\footcite[Vgl.][]{Emissionshandelsstelle2015}
+Auf diese Weise werden etwa 45\% der Europäischen Emissionen von dem Zertifikatehandel abgedeckt.\footcite[Vgl.][]{Komission}
+% \paragraph{Funktionsweise}
+\\
+Das EU-ETS wird als \enquote{cap and trade} System beschrieben.
+Dies bedeutet, dass es ein Limit an maximalen Treibhausgasemissionen gibt, die ausgestoßen werden dürfen.
+Dieses Limit wird in $CO_2$ Equivalenten angegeben, wobei für jede freigesetzte Tonne $CO_2$ (oder eine equivalente Menge anderer Treibhausgase) der Betreiber einer vom Handel abgedeckten Anlage ein Zertifikat nachweisen muss.
+Diese Zertifikate dürfen gehandelt werden.
+Das Ziel ist, dass sich hierdurch ein Anreiz zur Reduktion der Emissionen einstellt, da überschüssige Zertifikate verkauft werden können.
+Dieser Anreiz soll auch zur Entwicklung neuer emissionsärmerer Technologien führen.
+\footcite[Vgl.][]{Umweltbundesamt}\footcite[Vgl.][]{Komission}
+% \paragraph{Vergabe und Handel von Zertifikaten}
+\\
+Das EU-ETS teilt sich in vier Phasen auf, die den Einstieg in das System vereinfachten und die volkswirtschaftlichen Auswirkungen reduzieren sollen. 
+Aktuell läuft die dritte Phase (2013-2020), die sich durch eine zentrale Europäische Vergabestelle für Zertifikate auszeichnet. Diese Funktion übernahmen in den vorherigen Phasen Landeseigene Institutionen.
+Neben der bereits vorausgehend beschriebenen Erweiterung auf mehr Sektoren ändert diese Phase auch die Hauptsächliche Verteilung der Zertifikate. Während in den vorausgehenden Phasen die Zertifikate überwiegend kostenlos an die Anlagen verteilt wurden, die dann übrige Kapazitäten auf dem Markt kaufen mussten, werden in dieser Phase die meisten Zertifikate per Auktion und somit kostenpflichtig verteilt.\footcite[Vgl.][]{Komission}\footcite[Vgl.][]{Buchner2007}
+\\
+Die Reduktion der Treibhausgasemissionen wird zusätzlich durch eine mit den Jahren kontinuierlich sinkende Abgabge neuer Zertifikate gesteuert. Hierdurch soll der Preis für Zertifikate weiter steigen und eine Einsparung attraktiver werden.
+Während die Preise von Zertifikaten (Ausstoß einer Tonne $CO_2$ bzw. equivalenter Menge Treibhausgase) bis 2017 deutlich unter 10€ lag stieg dieser seit 2018 auf aktuell über 25€.\footcite[Vgl.][]{FinanzenNet}
 \section{Die EEG Umlage}
--
+Die \enquote{EEG Umlage} ist eine Maßnahme des Erneuerbaren Energien Gesetz und eine Maßnahme, die die deutsche Bundesregierung eingeführt hat, um den Ausbau der Erneuerbaren Energien zu Fördern.
+Die EEG-Umlage wurde 2012 in Deutschland eingeführt. 
+Bei der EEG-Umlage handelt es sich um einen gewissen Aufschlag auf den Energiepreis, den Endverbraucher zahlen müssen.
+Diese Umlage liegt 2020 bei 6,756ct pro kWh, unterliegt jedoch aufgrund der Berechnung jährlichen (in den letzten Jahren geringen) Schwankungen.\footcite[Vgl.][]{Netztransparenz2020}\\
+Für den Verkauf von Energie aus erneuerbaren Energiegewinnungen garantiert der deutsche Staat einen Abnahmepreis durch die Übertragungsnetzbetreiber, der Teils um ein vielfaches über dem aktuellen Energiepreis an der Börse liegt.
+Die Übertragungsnetzbetreiber kaufen somit Strom aus erneuerbaren Energiegewinnungen zu einem deutlich höheren Preis ab, als sie diesen wieder an der Strombörse verkaufen können. 
+Die Übertragungsnetzbetreiber müssen dabei den aus erneuerbaren Energieträgern gewonnenen Strom bevorzugt abnehmen.
+Der durch diese Umstände entstehende Verlust wird durch die Einnahmen der EEG-Umlage ausgeglichen.\footcite[Vgl. auch im Folgenden][]{Bundesnetzagentur2020}
+Es besteht zusätzlich auch die Möglichkeit der Direktvermarktung des produzierten Stroms an der Börse. Auch bei diesem Modell wird die Differenz zwischen Marktpreis und zugesichertem Verkaufspreis durch die Umlage erstattet, wie auch eine zusätzliche Managementprämie.
+\\
+Die EEG-Umlage verteuert den Strom um einen signifikanten Prozentsatz (für einen privaten Endverbraucher macht diese etwa 20\% des Strompreises aus). 
+Aus diesem Grund zahlen bestimmte Großverbraucher wie große Industriebetriebe mit über 1 GWh/Jahr Stromverbrauch und Schienenbahnen mit einem Verbrauch von über 2GWh/Jahr einen reduzierten Betrag.\footcite[Vgl.][]{Bundesnetzagentur2020}
