--- a/content/schluss.tex
+++ b/content/schluss.tex
@@ -1,2 +1,4 @@
 \chapter{Gegenüberstellung}
-1,5 Seiten
+Im vorherigen Kapitel wurden zwei Instrumente vorgestellt, die die Emission von Treibhausgasen veringern sollen.
+Bereits auf dem ersten Blick wird der fundamental diametrale Ansatz im Bezug zum Markt deutlich.
+Während bei dem europäischen Zertifikatehandel ein neuer Markt geschaffen wird, ist der Ansatz der EEG-Umlage ein massiver Eingriff in den Strommarkt indem man sowohl die bevorzugte Abnahme eines Produktes vorschreibt, als auch dessen Preis festlegt.
