--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -7,6 +7,7 @@
 
 %%% Name der eigenen Literatur-Datenbank %%%
 \bibliography{bibliography/bibliography.bib}
+\bibliography{bibliography/main.bib}
 
 \begin{document}
     
