--- a/content/__latexindent_temp.tex
+++ b/content/__latexindent_temp.tex
@@ -1,5 +1,4 @@
-\chapter{Einleitung}
-0,5 Seiten
-Die Reduktion des Treibhausgasausstoßes und dabei insbesondere des CO2 rückte in den letzten Jahren verstärkt in den Fokus des öffentlichen Diskurses.
-Diese Reduktion soll die Klimaerwärmung verlangsamen.
-Mit dem Pariser Klimaabkommen haben sich im Jahr 2015 fast 200 Länder zu diesem Ziel bekannt.
+\chapter{Gegenüberstellung}
+Im vorherigen Kapitel wurden zwei Instrumente vorgestellt, die die Emission von Treibhausgasen veringern sollen.
+Bereits auf dem ersten Blick wird der fundamental diametrale Ansatz im Bezug zum Markt deutlich.
+Während bei dem europäischen Zertifikatehandel ein neuer Markt geschaffen wird, ist der Ansatz der EEG-Umlage ein massiver Eingriff in den Strommarkt indem man sowohl die bevorzugte Abnahme eines Produktes vorschreibt, als auch dessen Preis festlegt.
