--- a/content/einleitung.tex
+++ b/content/einleitung.tex
@@ -2,9 +2,10 @@
 0,5 Seiten\\
 Die Reduktion der Treibhausgasemissionen und dabei insbesondere des $CO_2$ rückte in den letzten Jahren verstärkt in den Fokus des öffentlichen Diskurses.
 Diese Reduktion soll die Klimaerwärmung verlangsamen.
-Mit dem Pariser Klimaabkommen haben sich im Jahr 2015 fast 200 Länder zu diesem Ziel bekannt.
+Mit dem Pariser Klimaabkommen haben sich im Jahr 2015 fast alle Länder zu diesem Ziel bekannt.
 % TBD source
 Um dieses Ziel zu erreichen wurden in Deutschland und Europa mehrere Maßnahmen beschlossen und umgesetzt.
 In diesem Text wird der europäische Emissionshandel und das deutsche Erneuerbare Energien Gesetz (EEG) beschreiben und anschließend gegenübergestellt. 
+Bei dem Erneuerbaren Energien Gesetz liegt der Fokus auf der EEG-Umlage.
 Dabei werden insbesondere die verschiedenen Ansätze herausgearbeitet.
 Der Fokus liegt dabei auf den Mechanismen und nicht auf ihrer Entstehungsgeschichte.
