--- a/bibliography/main.bib
+++ b/bibliography/main.bib
@@ -51,6 +51,25 @@ url = {https://www.bundesnetzagentur.de/SharedDocs/FAQs/DE/Sachgebiete/Energie/V
 urldate = {2020-04-07},
 year = {2020}
 }
+@article{Bundesverfassungsgericht2016,
+author = {Bundesverfassungsgericht},
+month = {sep},
+publisher = {Bundesverfassungsgericht},
+title = {{1 BvR 1299/15}},
+year = {2016}
+}
+@misc{Matthes2017,
+author = {Matthes, Felix},
+month = {feb},
+title = {{EU-Umweltminister: Europa l{\"{a}}sst den Emissionshandel scheitern}},
+url = {https://www.zeit.de/wirtschaft/2017-02/eu-umweltminister-emissionshandel-barbara-hendricks-co2-ausstoss},
+year = {2017}
+}
+@article{SachverstandigenratzurBegutachtungdergesamtwirtschaftlichenEntwicklung,
+author = {{Sachverst{\"{a}}ndigenrat zur Begutachtung der gesamtwirtschaftlichen Entwicklung}},
+title = {{Jahresgutachten 2009/10 – Sechstes Kapital}},
+year = {2010}
+}
 
 
 
