--- a/content/__latexindent_temp.tex
+++ b/content/__latexindent_temp.tex
@@ -1,27 +1,10 @@
-\chapter{Gegenüberstellung}
-Im vorherigen Kapitel wurden zwei Instrumente vorgestellt, die die Emission von Treibhausgasen veringern sollen.
-Bereits auf dem ersten Blick wird der fundamental diametrale Ansatz im Bezug zum Markt deutlich.
-Während bei dem europäischen Zertifikatehandel ein neuer Markt geschaffen wird, ist der Ansatz der EEG-Umlage ein massiver Eingriff in den Strommarkt indem man sowohl die bevorzugte Abnahme eines Produktes vorschreibt, als auch dessen Preis festlegt.\\
-Ein weiterer Unterschied beider Instrumente ist der Geltungsbereich. Das EU-ETS ist ein europaweites - und sogar über die Grenzen der Europäischen Union hinausgehendes - System zur Reduktion von Treibhausgasemissionen in verschiedenen Sektoren. 
-Das EEG und die zugehörige EEG-Umlage ist dagegen ein deutsches Instrument und basiert auf den Stromverbrauch. Dabei werden andere Emissionsquellen (z.B. durch Verbrennung) nicht berücksichtigt.\\
-Hier zeigt sich ein weiterer entscheidener Unterschied beider Systeme.
-Emissionszertifikate müssen hauptsächlich von Großemittenten vorgehalten und somit bezahlt werden, während bei der EEG-Umlage der Endverbraucher zahlen muss, bei besonders hohem Stromverbrauch werden die Kosten jedoch wieder gesenkt.
-Dies schafft den Anreiz für Großverbraucher die in etwa den Schwellenwert zur Vergünstigung der Umlage erreichen, ihren Stromverbrauch nicht unter diesen Wert fallen zu lassen.
-Im Vergleich dazu ist der Anreiz beim EU-ETS linear, da hier jede eingesparte Emission durch den Verkauf bzw. nicht Kauf von Zertifikaten Geld spart.
-\paragraph{Kritik}
-Die Unterschiede beider Instrumente sind deutlich. 
-Neben dem Grundlegenden Ziel verbindet beide Instrumente jedoch auch die Kritik an ihnen.
-So wird bei beiden Instrumenten der Nutzen für den Klimaschutz angezweifelt.
-Bei der EEG-Umlage wurde durch ihren Eingriff in den Markt und damit unter anderem der im Grundgesetz verankerten Vertragsfreiheit ihre Verfassungskonformität angezweifelt. Ebenso wurde die Vereinbarkeit mit dem Europarech angezweifelt, jedoch wurden beide Kritikpunkte von den Gerichten nicht geteilt.\footcite[Vgl.][]{Bundesverfassungsgericht2016}
-Der größte Kritikpunkt an dem Emissionshandel ist ein Überangebot an Zertifikaten, welches zu einem geringen Preis pro Zertifikat führt.
-Ein geringer Preis pro Zertifikat veringert den Anreiz Emissionen zu vermeiden, weil die Investition in Emissionsreduktion sich später oder gar nicht rentiert.\footcite[Vgl. auch im Folgenden][]{Matthes2017}
-Es wurde ein Überangebot an Zertifikaten beklagt, was den Preisen zusätzlich senkte.
-Ebenso wird die kostenlose Vergabe von Zertifikaten kritisiert.
-Seit 2018 stieg der Zertifikatspreis jedoch, wie oben beschrieben, stark an und auch die kostenlose Vergabe wurde in den letzten Jahren reduziert.
-Der Zertifikatspreis wird von einigen jedoch als immer noch zu niedrig erachtet, um große Emissionsvermeidungen auszulösen.
-Auch dass nicht alle Emittenten vom Zertifikatehandel betroffen sind wird kritisiert.\\
-Das Zusammenspiel von EEG und Emissionshandel wird ebenfalls kritisiert.
-Durch das EEG wächst der Anteil erneuerbarer Energien am deutschen Strommarkt teils deutlich (verpflichtende bevorzugte Abnahme im Vergleich zu fossilen Energieträgern).
-Für diese erneuerbaren Energien müssen keine Emissionszertifikate erworben werden, die Nachfrage sind somit.
-Da der Zertifikatehandel europäisch ist, wird an anderen Orten Europas somit der Anreiz zur Einsparung von Emissionen wieder veringert.
-In wie weit die einzelnen Instrumente Emissionen einsparen ist schwierig zu messen, jedoch sinken die Emissionen im Energiesektor (EEG) und in den betroffenen Branchen (EU-ETS). Das Zusammenspiel beider Instrumente wird jedoch von vielen von der Bundesregierung beauftragten Experten als Problematisch für den Klimaschutz eingestuft.\footcite[Vgl. u.a.][]{SachverstandigenratzurBegutachtungdergesamtwirtschaftlichenEntwicklung}
+\chapter{Einleitung}
+Die Reduktion der Treibhausgasemissionen und dabei insbesondere des $CO_2$ rückte in den letzten Jahren verstärkt in den Fokus des öffentlichen Diskurses.
+Diese Reduktion soll die Klimaerwärmung verlangsamen.
+Mit dem Pariser Klimaabkommen haben sich im Jahr 2015 fast alle Länder zu diesem Ziel bekannt.
+% TBD source
+Um dieses Ziel zu erreichen wurden in Deutschland und Europa mehrere Maßnahmen beschlossen und umgesetzt.
+In diesem Text wird der europäische Emissionshandel und das deutsche Erneuerbare Energien Gesetz (EEG) beschreiben und anschließend gegenübergestellt. 
+Bei dem Erneuerbaren Energien Gesetz liegt der Fokus auf der EEG-Umlage.
+Dabei werden insbesondere die verschiedenen Ansätze herausgearbeitet.
+Der Fokus liegt dabei auf den Mechanismen und nicht auf ihrer Entstehungsgeschichte.
