--- a/content/schluss.tex
+++ b/content/schluss.tex
@@ -7,8 +7,8 @@ Das EEG und die zugehörige EEG-Umlage ist dagegen ein deutsches Instrument und 
 Hier zeigt sich ein weiterer entscheidener Unterschied beider Systeme.
 Emissionszertifikate müssen hauptsächlich von Großemittenten vorgehalten und somit bezahlt werden, während bei der EEG-Umlage der Endverbraucher zahlen muss, bei besonders hohem Stromverbrauch werden die Kosten jedoch wieder gesenkt.
 Dies schafft den Anreiz für Großverbraucher die in etwa den Schwellenwert zur Vergünstigung der Umlage erreichen, ihren Stromverbrauch nicht unter diesen Wert fallen zu lassen.
-Im Vergleich dazu ist der Anreiz beim EU-ETS linear, da hier jede eingesparte Emission durch den Verkauf bzw. nicht Kauf von Zertifikaten Geld spart.
-\paragraph{Kritik}
+Im Vergleich dazu ist der Anreiz beim EU-ETS linear, da hier jede eingesparte Emission durch den Verkauf bzw. nicht Kauf von Zertifikaten Geld spart.\\\\
+% \paragraph{Kritik}
 Die Unterschiede beider Instrumente sind deutlich. 
 Neben dem Grundlegenden Ziel verbindet beide Instrumente jedoch auch die Kritik an ihnen.
 So wird bei beiden Instrumenten der Nutzen für den Klimaschutz angezweifelt.
