--- a/deckblatt.tex
+++ b/deckblatt.tex
@@ -37,7 +37,7 @@
 \vspace{1cm}
 
 % Datum festlegen
-vorgelegt am \today 
+vorgelegt am 08. April 2020 
 
 \vspace{15mm}
 
@@ -68,9 +68,10 @@ von
 
 % HIER EDITIEREN: Name des Unternehmens, Name der Betreuerin/des Betreuers
 \begin{tabular}{ll}
-DHBW Stuttgart: \\
+Dozent an der DHBW Stuttgart: \\
 \hspace{0.4\linewidth} & \\
 Dr. Schweizer \\
+Geld, Währung, Außenwirtschaft, Wirtschaftspolitik\\
 \end{tabular}
 
 
