--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -19,7 +19,7 @@
 
     %%% Abstract einbinden (optionale Kurzfassung Ihrer Arbeit) %%%
     % \input{abstract.tex}
-    % \cleardoublepage
+    \cleardoublepage
 
     \begin{spacing}{1}
 
@@ -28,25 +28,25 @@
         \clearpage
         
         %%% Abkürzungsverzeichnis %%%
-        \input{tables/abkuerzungen.tex}
-        \clearpage
+        % \input{tables/abkuerzungen.tex}
+        % \clearpage
 
         \thispagestyle{kapitelkopfzeile}
 
         %%% Abbildungsverzeichnis %%%
-        \listoffigures
-        \phantomsection
+        % \listoffigures
+        % \phantomsection
         
         %%% Einfügen des Abbildungsverzeichnisses in das Inhaltsverzeichnis %%%
-        \addcontentsline{toc}{chapter}{Abbildungsverzeichnis}
-        \clearpage
+        % \addcontentsline{toc}{chapter}{Abbildungsverzeichnis}
+        % \clearpage
 
         %%% Tabellenverzeichnis %%%
-        \listoftables
-        \phantomsection
+        % \listoftables
+        % \phantomsection
         
         %%% Einfügen des Tabellenverzeichnisses in das Inhaltsverzeichnis %%%
-        \addcontentsline{toc}{chapter}{Tabellenverzeichnis}
+        % \addcontentsline{toc}{chapter}{Tabellenverzeichnis}
         \cleardoublepage
     
     \end{spacing}
@@ -58,8 +58,8 @@
     % Empfehlung: strukturieren Sie Ihren Text in einzelnen Dateien und binden Sie diese hier mit   \input{main_part/dateiname.tex} ein
 
     % Cheat Sheet mit einem Überblick über die wichtigsten Befehle
-    \input{cheat_sheet.tex}
-    \clearpage
+    % \input{cheat_sheet.tex}
+    % \clearpage
 
     \input{content/einleitung.tex}
     \input{content/main.tex}
@@ -73,7 +73,7 @@
     %%% Ende des eigentlichen Inhalts %%%
 
     %%% Beginn des Anhangs %%%
-    \input{appendix/appendix.tex}
+    % \input{appendix/appendix.tex}
 
     %%% Quellenverzeichnisse %%%
     \literaturverzeichnis
