--- a/content/schluss.tex
+++ b/content/schluss.tex
@@ -16,7 +16,7 @@ Neben dem grundlegenden Ziel verbindet beide Instrumente jedoch auch die Kritik 
 So wird bei beiden Instrumenten der Nutzen für den Klimaschutz angezweifelt.
 Bei der EEG-Umlage wurde, durch ihren Eingriff in den Markt und damit unter anderem der im Grundgesetz verankerten Vertragsfreiheit, ihre Verfassungskonformität angezweifelt. Ebenso wurde die Vereinbarkeit mit dem Europarecht angezweifelt, jedoch wurden beide Kritikpunkte von den Gerichten nicht geteilt.\footcite[Vgl.][]{Bundesverfassungsgericht2016}
 Der größte Kritikpunkt an dem Emissionshandel ist ein Überangebot an Zertifikaten, welches zu einem geringen Preis pro Zertifikat führt.
-Ein geringer Preis pro Zertifikat veringert den Anreiz Emissionen zu vermeiden, weil die Investition in Emissionsreduktion sich später oder gar nicht rentiert.\footcite[Vgl. auch im Folgenden][]{Matthes2017}
+Ein geringer Preis pro Zertifikat verringert den Anreiz Emissionen zu vermeiden, weil die Investition in Emissionsreduktion sich später oder gar nicht rentiert.\footcite[Vgl. auch im Folgenden][]{Matthes2017}
 Es wurde ein Überangebot an Zertifikaten beklagt, was den Preis zusätzlich senkte.
 Ebenso wird die kostenlose Vergabe von Zertifikaten kritisiert.
 Seit 2018 stieg der Zertifikatspreis jedoch, wie oben beschrieben, stark an und auch die kostenlose Vergabe wurde in den letzten Jahren reduziert.
